add cards and models to our boostrap (doesnt work

--- a/index_html.html
+++ b/index_html.html
@@ -49,8 +49,53 @@
         <div class ="col-md 3 col-lg-8 border border-primary">4</div>
         <div class ="col-md 4 col-lg-8 border border-primary">3</div>
     </div>
+<div class ="contianer-fluid" style="border: black 1px solid">
+    <div class="row"/>.
+    <div class ="col-md 5 col-lg-8 border border-primary">5</div>
+    <div class ="col-md 3 col-lg-8 border border-primary">4</div>
+    <div class ="col-md 4 col-lg-8 border border-primary">3</div>
+</div>
     hello world
 </div>
+<p> this is my paragraph <span class = "text-muted"></span> </p>
+
+<div class ="container">
+            <div class ="row" md />
+            <div class ="col-md 4/>
+        <div class="card" style="width: 18rem;">
+         <img src="..." class="card-img-top" alt="...">
+         <div class="card-body">
+             <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <a href="#" class="btn btn-primary">Go somewhere</a>
+         </div>
+        </div>
+
+            <div class ="row" />
+            <div class ="col-md 4/>
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+         <div class="card-body">
+             <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+        <div class ="container">
+         <div class ="row" />
+         <div class ="col-md 4/>
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+         <div class="card-body">
+             <h5 class="card-title">Card title</h5>
+             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+         </div>
+        </div>
+</div>
+</div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
