--- a/index_html.html
+++ b/index_html.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>bootstrap lab</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -22,13 +26,16 @@
                     <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </li>
@@ -43,59 +50,65 @@
         </div>
     </div>
 </nav>
-<div class ="contianer" style="border: black 1px solid">
-    <div class="row"/>.
-        <div class ="col-md 5 col-lg-8 border border-primary">5</div>
-        <div class ="col-md 3 col-lg-8 border border-primary">4</div>
-        <div class ="col-md 4 col-lg-8 border border-primary">3</div>
+<div class="contianer" style="border: black 1px solid">
+    <div class="row"/>
+    .
+    <div class="col-md 5 col-lg-8 border border-primary">5</div>
+    <div class="col-md 3 col-lg-8 border border-primary">4</div>
+    <div class="col-md 4 col-lg-8 border border-primary">3</div>
+</div>
+<div class="contianer-fluid" style="border: black 1px solid">
+    <div class="row"/>
+    .
+    <div class="col-md 5 col-lg-8 border border-primary">5</div>
+    <div class="col-md 3 col-lg-8 border border-primary">4</div>
+    <div class="col-md 4 col-lg-8 border border-primary">3</div>
+</div>
+hello world
+</div>
+<p> this is my paragraph <span class="text-muted"></span></p>
+
+<div class="container">
+    <div class="row" md/>
+    <div class="col-md 4/>
+        <div class=" card
+    " style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
-<div class ="contianer-fluid" style="border: black 1px solid">
-    <div class="row"/>.
-    <div class ="col-md 5 col-lg-8 border border-primary">5</div>
-    <div class ="col-md 3 col-lg-8 border border-primary">4</div>
-    <div class ="col-md 4 col-lg-8 border border-primary">3</div>
-</div>
-    hello world
-</div>
-<p> this is my paragraph <span class = "text-muted"></span> </p>
-
-<div class ="container">
-            <div class ="row" md />
-            <div class ="col-md 4/>
-        <div class="card" style="width: 18rem;">
-         <img src="..." class="card-img-top" alt="...">
-         <div class="card-body">
-             <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             <a href="#" class="btn btn-primary">Go somewhere</a>
-         </div>
+    <div class="row">
+        <div class="col-md 4/>
+        <div class=" card
+        " style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
-
-            <div class ="row" />
-            <div class ="col-md 4/>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-         <div class="card-body">
-             <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-        <div class ="container">
-         <div class ="row" />
-         <div class ="col-md 4/>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-         <div class="card-body">
-             <h5 class="card-title">Card title</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-         </div>
-        </div>
-</div>
+    </div>
+    <div class="row"/>
+    <div class="col-md 4/>
+        <div class=" card
+    " style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
 </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 </html>
